
    AVRO-520. Refactor C++ validation code. (sbanacho)

    AVRO-521. Out of memory and other issues with Junit tests for mapreduce (thiru)

    AVRO-511. Ruby implementation passes the rpc interop tests.

    AVRO-525. remove unused imports (Esteve Fernandez via hammer)

    AVRO-526. Fall back to pure Python StringIO if cStringIO is not available
    (Esteve Fernandez via hammer)

  BUG FIXES
    AVRO-461. Skipping primitives in the ruby side (jmhodges)

    AVRO-489. Skipping complex objects in the ruby impl. (jmhodges)

    AVRO-502. Memory leak from parsing JSON schema.
    (Robert G. Jakabosky via massie)

    AVRO-496. python sample_http_client.py is broken (Jeff Hodges via hammer)

    AVRO-515. Fix build and compatibility problems. (sbanacho)

    AVRO-516. Ruby socket RPC should use big endian buffer lengths.
    (jmhodges)

    AVRO-518. Add link to boost filesystem library.  (John Plevyak via sbanacho)

    AVRO-517. Resolving Decoder fails in some cases. (thiru) 

    AVRO-524. DataFileWriter.appendTo leads to intermittent IOException during write() (thiru)

    AVRO-527. Undefined variable "schm" error (Esteve Fernandez via hammer)

Avro 1.3.2 (31 March 2010)

  IMPROVEMENTS

    AVRO-449. CMake-based build system for Avro/C (Bruce Mitchener via massie)

    AVRO-418. avro.h generates errors when included in C++ code 
    (Bruce Mitchener via massie)

    AVRO-480. avro_flush() is in the header, but not implemented
    (Bruce Mitchener via massie)

    AVRO-481. Buildbot warning fixes (Bruce Mitchener via massie)

    AVRO-451. Try to use hashlib in Python implementation and fall
    back to md5 if we can't find it (Bruce Mitchener via hammer)

    AVRO-423. HTTPTransceiver does not reuse connections
    (Eric Evans via hammer)

    AVRO-490. Add Ant task to deploy Java artifacts to Maven repo. (cutting)

  BUG FIXES

    AVRO-479. Fix 'sign' target in top-level build.sh to generate md5
    checksums. (cutting)
