@@ -339,8 +339,7 @@
       <junit showoutput="yes"
              printsummary="withOutAndErr"
              haltonfailure="no"
-             fork="yes" forkMode="once"
-             maxmemory="128m"
+             fork="yes"
              errorProperty="tests.failed" failureProperty="tests.failed">
         <sysproperty key="test.count" value="${test.count}"/>
         <sysproperty key="test.dir" value="@{test.dir}"/>
